[tool.poetry]
name = "QIPM"
version = "0.1.0"
description = ""
authors = ["kuru-to <ideruf96@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.20.1"
qiskit = "0.18.3"
scipy = "1.6.1"
setuptools = "49.2.1"


[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
pytest-cov = "^3.0.0"
mypy = "^0.961"
pylint = "^2.14.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
